<?xml version="1.0"?>
<package>

  <!-- Package Details -->
  <name>traditional_stereo_ros</name>
  <version>0.0.0</version>
  <description>A traditional stereo engine for making depthmaps from stereo pairs</description>
  <maintainer email="tgee862@aucklanduni.ac.nz">Trevor Gee</maintainer>
  <license>TODO</license>

  <!-- Build Tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependences for building the package --> 
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>maara_msgs</build_depend>
  <build_depend>cares_msgs</build_depend>
  <!-- Dependences for execution -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>maara_msgs</run_depend>
  <run_depend>cares_msgs</run_depend>
</package>
